--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     <!-- End of About Us -->
 
     <!-- Our Menu -->
-    <section class="light-bg" id="menu">
+    <section class="light-bg pt-120 pb-80" id="menu">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-8 col-md-10">
