--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
     <!-- End of About Us -->
 
     <!-- Our Menu -->
-    <section class="light-bg pt-120 pb-80" id="menu">
+    <section class="light-bg pt-120 pb-120" id="menu">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-8 col-md-10">
@@ -381,7 +381,7 @@
     <!-- End of Our Menu -->
 
     <!-- Our Special Offers -->
-    <section id="our-special"style="background: url(./assets/images/slide1.jpg)no-repeat center center/ cover;margin-top: 70px;">
+    <section id="our-special"style="background: url(./assets/images/slide1.jpg)no-repeat center center/ cover;">
         <div class="overlay">
             <div class="container">
                 <div class="content">
@@ -428,7 +428,7 @@
     <!-- End of Our Special Offers -->
 
     <!-- Product Carousel -->
-    <section id="product" class="light-bg pt-120">
+    <section id="product" class="light-bg pt-120 pb-120">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-8 col-md-10">
@@ -524,15 +524,14 @@
     <!-- End of Product Carousel -->
 
     <!-- Join Us -->
-    <section id="join_us" class="position-relative"  style="background: url(./assets/images/slide1.jpg)no-repeat center center/ cover;margin-top: 70px;">
+    <section id="join_us" class="position-relative pt-120 pb-120"  style="background: url(./assets/images/slide1.jpg)no-repeat center center/ cover;">
         <div class="container">
             <div class="text-center">
                 <div class="row d-flex align-content-center justify-content-center">
                     <div class="col-6">
                         <div data-animate="fadeInUp" data-delay=".1" style="animation-duration: 0.6s; animation-delay: 0.1s;" class="section-title text-center animated fadeInUp p-0">
-                            <div class="d-flex justify-content-center mt-5">
-                                <h2 style="font-weight: 400;" class="d-block text-white">Join Us </h2>
-                                <h2 style="padding-top: 1px;" class="pl-1 text-white">Today!</h2>
+                            <div class="row justify-content-center">
+                                <h2 style="font-weight: 400; color: #ffffff;">Join Us &nbsp;<h2 style="font-weight: 600; color: #ffffff;">Today!</h2></h2>
                             </div>
                         </div>
                     </div>
@@ -551,14 +550,13 @@
     <!-- End of Join Us -->
 
     <!-- About Us -->
-    <section id="about_us" class="light-bg pt-120 pb-55">
+    <section id="about_us" class="light-bg pt-120 pb-120">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-8 col-md-10">
                     <div class="section-title text-center">
-                        <div class="d-flex justify-content-center">
-                            <h2 class="d-block" style="font-weight: 400;">This Week </h2>
-                            <h2 class="pl-1" style="padding-top: 1px;">Special Meels:</h2>
+                        <div class="row justify-content-center">
+                            <h2 style="font-weight: 400;">About &nbsp;<h2 style="font-weight: 600;">Us:</h2></h2>
                         </div>
                     </div>
                 </div>
@@ -616,7 +614,7 @@
 
     
     <!-- Reviews -->
-    <section id="reviews" class="theme-bg-overlay bg-img-xs-none pt-120 pb-55" style="background: url(./assets/images/slide2.jpg)no-repeat center center/ cover;">
+    <section id="reviews" class="theme-bg-overlay bg-img-xs-none pt-120 pb-120" style="background: url(./assets/images/slide2.jpg)no-repeat center center/ cover;">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-8 col-md-10">
