--- a/index.html
+++ b/index.html
@@ -29,15 +29,15 @@
         <div class="main-header" data-animate="fadeInUp" data-delay=".9">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-xl-2 col-lg-1 col-md-2 col-sm-4 col-9">
+                    <div class="header_part-1 col-xl-3 col-lg-2 col-md-6 col-sm-6 col-6 d-sm-block">
                         <!-- Logo -->
                         <div class="logo">
-                            <a href="index.html" style="font-weight: 600;">
-                                <img src="" data-rjs="2" alt="LOGO">
+                            <a href="index.html">
+                                <img src="./assets/images/logo.png" data-rjs="2" alt="LOGO" style="height: 50px;">
                             </a>
                         </div>
                     </div>
-                    <div class="col-xl-7 col-lg-7 col-md-5 col-sm-2 col-3">
+                    <div class="header_part-2 col-xl-6 col-lg-7 col-md-6 col-sm-6 col-6 d-sm-block text-right">
                         <nav>
                             <!-- Header-menu -->
                             <div class="header-menu">
@@ -52,13 +52,13 @@
                             <!-- End of Header-menu -->
                         </nav>
                     </div>
-                    <div class="col-xl-3 col-lg-4 col-md-5 col-sm-6">
+                    <div class="header_part-3 col-xl-3 col-lg-3">
                         <div class="d-flex justify-content-around">
                             <div class="">
-                                <a data-animate="fadeInUp" data-delay=".6" href="#" class="btn text-uppercase">Login</a>
+                                <a data-animate="fadeInUp" data-delay=".6" href="#" class="btn text-uppercase animated fadeInUp" style="animation-duration: 0.6s; animation-delay: 0.6s;padding: 5px 20px;">Login</a>
                             </div>
                             <div class="">
-                                <a data-animate="fadeInUp" data-delay=".6" href="#" class="btn text-uppercase">Sign Up</a>
+                                <a data-animate="fadeInUp" data-delay=".6" href="#" class="btn text-uppercase animated fadeInUp" style="animation-duration: 0.6s; animation-delay: 0.6s;padding: 5px 20px;">Sign Up</a>
                             </div>
                         </div>
                     </div>
