--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <div class="header_part-2 col-xl-6 col-lg-7 col-md-6 col-sm-6 col-6 d-sm-block text-right">
                         <nav>
                             <!-- Header-menu -->
-                            <div class="header-menu">
+                            <div class="header-menu p-1">
                                 <ul>
                                     <li class="active"><a href="index.html">Home</a></li>
                                     <li><a href="#">On The Menu</a></li>
@@ -79,7 +79,7 @@
                             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-8">
                                 <div class="slide-content-inner">
                                     <h2 data-animate="fadeInUp" data-delay=".05" class="animated fadeInUp" style="animation-duration: 0.6s; animation-delay: 0.05s;">Food With a Purpose</h2>
-                                    <p class="text-white animated fadeInUp" data-animate="fadeInUp" data-delay=".3" style="animation-duration: 0.6s; animation-delay: 0.3s;">Welcome to the Berry Fresh Cafe's web page. We are a cafe in Media PA that serves all organic and GMO free ingredients and are committed to delivering the freshest food to our customers. Our menu includes the freshest Smoothies, Sandwiches, Paninis and Acai (ah-sigh-ee) bowls.
+                                    <p class="text-white animated fadeInUp" data-animate="fadeInUp" data-delay=".3" style="animation-duration: 0.6s; animation-delay: 0.3s;">Welcome to the Berry Fresh Cafe's web page. We are a cafe in Media PA that serves all organic and GMO free ingredients and are committed<br> to delivering the freshest food to our customers. Our menu includes the freshest Smoothies, Sandwiches, Paninis and Acai (ah-sigh-ee) bowls.
                                 </p></div>
                                 <a data-animate="fadeInUp" data-delay=".6" href="#" class="btn animated fadeInUp" style="animation-duration: 0.6s; animation-delay: 0.6s;">Learn More</a>
                             </div>
@@ -95,7 +95,7 @@
                             <div class="col-xl-8 col-lg-8 col-md-8 col-sm-8 col-8">
                                 <div class="slide-content-inner">
                                     <h2 data-animate="fadeInUp" data-delay=".05" class="animated fadeInUp" style="animation-duration: 0.6s; animation-delay: 0.05s;">Food With a Purpose</h2>
-                                    <p class="text-white animated fadeInUp" data-animate="fadeInUp" data-delay=".3" style="animation-duration: 0.6s; animation-delay: 0.3s;">Welcome to the Berry Fresh Cafe's web page. We are a cafe in Media PA that serves all organic and GMO free ingredients and are committed to delivering the freshest food to our customers. Our menu includes the freshest Smoothies, Sandwiches, Paninis and Acai (ah-sigh-ee) bowls.
+                                    <p class="text-white animated fadeInUp" data-animate="fadeInUp" data-delay=".3" style="animation-duration: 0.6s; animation-delay: 0.3s;">Welcome to the Berry Fresh Cafe's web page. We are a cafe in Media PA that serves all organic and GMO free ingredients and are committed<br> to delivering the freshest food to our customers. Our menu includes the freshest Smoothies, Sandwiches, Paninis and Acai (ah-sigh-ee) bowls.
                                 </p></div>
                                 <a data-animate="fadeInUp" data-delay=".6" href="#" class="btn animated fadeInUp" style="animation-duration: 0.6s; animation-delay: 0.6s;">Learn More</a>
                             </div>
@@ -631,25 +631,25 @@
                             <div class="swiper-wrapper" style="transform: translate3d(-600px, 0px, 0px); transition-duration: 0ms;">
                                 <!-- Single Review: 1 -->
                                 <div class="swiper-slide">
-                                    <img src="./assets/images/posts/post2.jpg" alt="">
+                                    <span style="background: url(./assets/images/posts/post1.jpg)no-repeat center center/ cover;height: 200px; width: 100%; display: inline-block;"></span>
                                 </div>
                                 <!-- End of Single Review -->
 
                                 <!-- Single Review: 2 -->
                                 <div class="swiper-slide">
-                                    <img src="./assets/images/posts/post2.jpg" alt="">
+                                    <span style="background: url(./assets/images/posts/post2.jpg)no-repeat center center/ cover;height: 200px; width: 100%; display: inline-block;"></span>
                                 </div>
                                 <!-- End of Single Review -->
 
                                 <!-- Single Review: 3 -->
                                 <div class="swiper-slide">
-                                    <img src="./assets/images/posts/post2.jpg" alt="">
+                                    <span style="background: url(./assets/images/posts/post1.jpg)no-repeat center center/ cover;height: 200px; width: 100%; display: inline-block;"></span>
                                 </div>
                                 <!-- End of Single Review -->
 
                                 <!-- Single Review: 4 -->
                                 <div class="swiper-slide">
-                                    <img src="./assets/images/posts/post2.jpg" alt="">
+                                    <span style="background: url(./assets/images/posts/post3.jpg)no-repeat center center/ cover;height: 200px; width: 100%; display: inline-block;"></span>
                                 </div>
                                 <!-- End of Single Review -->
                             </div>
@@ -666,8 +666,8 @@
     <!-- Footer -->
     <footer>
         <div class="text-white">
-            <div class="row">
-                <div class="col-lg-6 col-md-12 col-sm-12 p-0" style="background: url(./assets/images/footer_cover.jpg)no-repeat center center/ cover;">
+            <div class="d-lg-flex d-sm-block d-md-block">
+                <div class="footer_part-1" style="width: 100%; background: url(./assets/images/footer_cover.jpg)no-repeat center center/ cover;">
                     <div class="d-flex align-content-center justify-content-center align-self-center" style="padding: 100px 150px;">
                         <div class="align-self-center">
                             <p class=""><i style="font-size: 17px;" class="fa-solid fa-phone pr-1"></i> +880 1881157792</p>
@@ -703,7 +703,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-6 col-md-12 col-sm-12 p-0">
+                <div class="" style="width: 100%;">
                     <div class="mapouter"><div class="gmap_canvas"><iframe width="100%" height="100%" id="gmap_canvas" src="https://maps.google.com/maps?q=Feni&amp;t=&amp;z=10&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2yu.co">2yu</a><br><style>.mapouter{position:relative;text-align:right;height:100%;width:100%;}</style><a href="https://embedgooglemap.2yu.co">html embed google map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:100%;width:100%;}</style></div></div>
                 </div>
             </div>
